--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,13 +7,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Detector de Glaucoma</h1>
-  <div class="camera">
-    <video id="video" autoplay playsinline></video>
-    <canvas id="canvas" style="display:none;"></canvas>
-    <button id="capture">Capturar</button>
+  <div class="container">
+    <h1>Detector de Glaucoma</h1>
+    <div class="camera">
+      <video id="video" autoplay playsinline></video>
+      <canvas id="canvas" style="display:none;"></canvas>
+      <div id="capturedImageContainer" style="display: none;">
+        <h3>Imagen Capturada:</h3>
+        <img id="capturedImage" alt="Imagen capturada" />
+      </div>
+      <button id="capture" class="capture-button">Capturar</button>
+    </div>
+    <div id="loading" class="loading" style="display: none;">Procesando...</div>
+    <div id="result" class="result"></div>
   </div>
-  <div id="result"></div>
   <script src="script.js"></script>
 </body>
 </html>
+
