--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Detector de Glaucoma</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
   <div class="container">
@@ -12,22 +13,25 @@
 
     <div class="camera">
       <video id="video" autoplay playsinline></video>
-      <canvas id="canvas" style="display:none;"></canvas>
+      <canvas id="canvas" style="display: none;"></canvas>
 
-      <div id="capturedImageContainer" style="display: none;">
-        <h3>Imagen seleccionada:</h3>
-        <img id="capturedImage" alt="Imagen capturada" />
-      </div>
-
-      <div class="controls">
-        <button id="capture" title="Capturar imagen 📸">📸 Capturar</button>
-        <input type="file" id="fileInput" accept="image/*"/>
-        <button id="switchCamera" title="Cambiar cámara 🔄">🔄 Cámara</button>
-        <button id="retry" title="Volver a intentar 🔁">🔁 Reintentar</button>
+      <div class="buttons">
+        <button id="capture" class="icon-button" title="Tomar foto">
+          <i class="fas fa-camera"></i>
+        </button>
+        <label for="upload" class="icon-button" title="Subir imagen">
+          <i class="fas fa-upload"></i>
+        </label>
+        <input type="file" id="upload" accept="image/*" style="display: none;" />
       </div>
     </div>
 
-    <div id="loading" class="loading" style="display: none;">Procesando imagen...</div>
+    <div id="previewContainer" class="preview-container" style="display: none;">
+      <h3>Imagen seleccionada:</h3>
+      <img id="capturedImage" alt="Imagen" />
+    </div>
+
+    <div id="loading" class="loading" style="display: none;">Procesando...</div>
     <div id="result" class="result"></div>
   </div>
 
