--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,9 +15,9 @@
       <canvas id="canvas" style="display: none;"></canvas>
       <div class="button-group">
         <button id="switchCameraBtn" title="Cambiar cámara">🔁</button>
-        <button id="captureBtn" title="Capturar imagen">📷</button>
+        <button id="captureBtn" title="Capturar imagen"> Capturar imagen 📷</button>
         <input type="file" id="uploadInput" accept="image/*" hidden>
-        <button id="uploadBtn" title="Subir imagen">📁</button>
+        <button id="uploadBtn" title="Subir imagen"> Subir imagen 📁</button>
       </div>
     </div>
 
