--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Detección de Glaucoma</title>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detección de Glaucoma</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Detección de Glaucoma</h1>
+    <div class="container">
+        <header>
+            <h1>Detección de Glaucoma</h1>
+        </header>
 
-    <div class="video-container">
-      <video id="video" autoplay playsinline></video>
-      <canvas id="canvas" style="display: none;"></canvas>
-      <div class="button-group">
-        <button id="switchCameraBtn" title="Cambiar cámara">🔁</button>
-        <button id="captureBtn" title="Capturar imagen"> Capturar imagen 📷</button>
-        <input type="file" id="uploadInput" accept="image/*" hidden>
-        <button id="uploadBtn" title="Subir imagen"> Subir imagen 📁</button>
-      </div>
+        <div id="upload-container">
+            <label for="image-upload" class="upload-btn">
+                <span>Subir una imagen</span>
+            </label>
+            <input type="file" id="image-upload" accept="image/*">
+        </div>
+
+        <div id="preview-container">
+            <h2>Vista previa</h2>
+            <div id="image-preview" class="preview">
+                <p>No se ha subido ninguna imagen.</p>
+            </div>
+            <button id="confirm-btn" class="btn" style="display: none;">Confirmar</button>
+            <button id="retry-btn" class="btn" style="display: none;">Volver a intentarlo</button>
+        </div>
+
+        <div id="result-container" class="result-container">
+            <h2>Resultados</h2>
+            <p id="result-nervio-optico"></p>
+            <p id="result-glaucoma"></p>
+            <p id="probabilidad-glaucoma"></p>
+        </div>
+
+        <footer>
+            <p>&copy; 2025 Todos los derechos reservados</p>
+        </footer>
     </div>
 
-    <div id="previewContainer" class="preview-container hidden">
-      <h2>Vista previa</h2>
-      <img id="previewImage" />
-      <div class="button-group">
-        <button id="confirmBtn" class="confirm">✅ Confirmar</button>
-        <button id="cancelBtn" class="cancel">❌ Cancelar</button>
-      </div>
-    </div>
-
-    <div id="loading" class="loading hidden">Analizando imagen...</div>
-    <div id="result" class="result"></div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
