--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detección de Glaucoma</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Glaucomate</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Detección de Glaucoma</h1>
-            <p>Sube una imagen del nervio óptico para comenzar el análisis.</p>
-        </header>
-
-        <section id="upload-section">
-            <label for="image-upload" class="upload-btn">
-                <span>Sube tu Imagen</span>
-            </label>
-            <input type="file" id="image-upload" accept="image/*" hidden>
-        </section>
-
-        <section id="preview-section" style="display:none;">
-            <h2>Vista previa</h2>
-            <div id="image-preview"></div>
-            <button id="confirm-btn" class="btn">Confirmar Imagen</button>
-            <button id="retry-btn" class="btn">Volver a Intentarlo</button>
-        </section>
-
-        <section id="result-section" style="display:none;">
-            <h2>Resultados del Análisis</h2>
-            <div id="result-nervio-optico"></div>
-            <div id="result-glaucoma"></div>
-            <div id="probabilidad-glaucoma"></div>
-        </section>
-
-        <footer>
-            <p>&copy; 2025 Todos los derechos reservados.</p>
-        </footer>
+  <main class="container">
+    <h1>Glaucomate</h1>
+    <div class="upload-section">
+      <video id="video" autoplay playsinline></video>
+      <canvas id="canvas" class="hidden"></canvas>
+      <img id="preview" class="hidden" />
+      <div class="controls">
+        <button id="flipBtn" title="Cambiar cámara">🔄</button>
+        <button id="captureBtn" title="Capturar">📸</button>
+        <button id="uploadBtn" title="Subir imagen">📁</button>
+        <input type="file" id="fileInput" accept="image/*" class="hidden" />
+      </div>
     </div>
 
-    <script src="script.js"></script>
+    <div id="confirmSection" class="hidden">
+      <p>¿Confirmar esta imagen para análisis?</p>
+      <button id="confirmBtn">✅ Confirmar</button>
+      <button id="cancelBtn">❌ Cancelar</button>
+    </div>
+
+    <div id="result" class="hidden"></div>
+    <div id="loading" class="hidden">Analizando imagen...</div>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
